[package]
name = "luncswap-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = { version = "1.1.2", features = ["library"] }
serde = "1.0.193"
