[package]
name = "luncswap_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
luncswap_pair = { path = "../luncswap_pair", default-features = false, version = "0.1.0" }
cwhelper = { path = "../../packages/cwhelper", default-features = false, version = "0.1.0" }
cosmwasm-std = { version = "1.5.3", features = ["staking"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
cw20 = { version = "1.1.1" }
cw20-base = { version = "1.1.1", features = ["library"] }
cw-storage-plus = { version = "1.2.0" }
thiserror = { version = "1.0.50" }
schemars = "0.8.16"
cw0 = "0.10.3"
cosmwasm-schema = "1.5.3"
cw2 = "1.1.2"
semver = "1.0.20"

[dev-dependencies]
cosmwasm-schema = "1.5.3"
cw-multi-test = "0.13.4"
