[package]
name = "luncswap_pair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
cw20 = { version = "1.1.1" }
cw20-base = { version = "1.1.1", features = ["library"] }
cw-storage-plus = { version = "1.2.0" }
thiserror = { version = "1.0.50" }
schemars = "0.8.16"
cw0 = "0.10.3"
cosmwasm-schema = "1.5.0"
cw2 = "1.1.2"
semver = "1.0.20"

[dev-dependencies]
cosmwasm-schema = "1.5.0"
cw-multi-test = "0.13.4"
